--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,40 @@
-html,
+@import "swiper/swiper-bundle.min.css";
+@import "swiper/swiper.min.css";
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Roboto;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
-* {
-  box-sizing: border-box;
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  box-sizing: border-box !important;
 }
