--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -2,10 +2,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 60%;
+    margin-top: 20px;
 }
 
 .services_container {
     display: flex;
+
+    @media (max-width: 380px) {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .service {
@@ -18,6 +25,26 @@
     font-weight: 600;
     margin: 0 10px;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media (max-width: 768px) {
+        height: 100px;
+        width: 100px;
+        font-size: 12px;
+    }
+
+    @media (max-width: 380px) {
+        margin-top: 15px;
+    }
+}
+
+.service_image_container {
+    @media (max-width:768px) {
+        height: 80px;
+        width: 80px;
+    }
 }
 
 .swiper_container {
@@ -41,4 +68,33 @@
     @media (max-width: 768px) {
         height: 100px;
     }
+}
+
+.form_home_container{
+    display: flex;
+    width: 100%;
+
+    @media (max-width: 991px) {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.form_container {
+    width: 35%;
+    display: flex;
+    background-color: #ffd9dc;
+    z-index: 1;
+    padding: 20px;
+    margin: 20px 10px 10px 10px;
+    border-radius: 8px;
+
+    @media (max-width: 991px) {
+        width: 80%;
+    }
+}
+
+.formsection {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
