gallery images added

--- a/components/Home/Home.module.scss
+++ b/components/Home/Home.module.scss
@@ -98,3 +98,9 @@
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
+.my_work_btn_container {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+}
