--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 @import "swiper/swiper-bundle.min.css";
 @import "swiper/swiper.min.css";
+@import "react-toastify/dist/ReactToastify.css";
 
 *,
 ::after,
