--- a/components/Gallery/Gallery.module.scss
+++ b/components/Gallery/Gallery.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 30px 10px;
 }
 
 .my_work_text {
